fix bug : first message appearing twice fix bug : messages getting empty on clicking ContactCard fix bug: notifications getting updated on first messages added spinner for loading messages added message animation added scrollbar for better ui

--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -1,5 +1,32 @@
 @import "tailwindcss";
 
-.hide-scroll::-webkit-scrollbar {
-    display: none; 
-  }
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+::-webkit-scrollbar-track {
+  background: #7cb9e8;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+::-webkit-scrollbar {
+  width: 6px;
+  visibility: hidden;
+}
+
+:hover::-webkit-scrollbar {
+  visibility: visible;
+}
+
+::-webkit-scrollbar-corner {
+  background: transparent;
+  height: 0;
+}
